objects/vlocity_cmt__DocumentTemplate__c.object
<CustomObject>
    <description>A template is a reusable assembly of clauses and other document sections. A template once created and activated can be used to dynamically generate documents for multiple contracts.</description>
    <fields>
        <fullName>vlocity_cmt__ApplicableItemTypes__c</fullName>
        <description>The type of SFDC objects (lines) the Template is applicable to</description>
        <label>Applicable Item Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OrderItem</fullName>
                </value>
                <value>
                    <fullName>QuoteLineItem</fullName>
                </value>
                <value>
                    <fullName>OpportunityLineItem</fullName>
                </value>
                <value>
                    <fullName>ContractLineItem__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ApplicableTypes__c</fullName>
        <description>The type of SFDC objects (headers) the Template is applicable to</description>
        <label>Applicable Objects</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractTypes__c</fullName>
        <description>Contract types that the template is restricted to</description>
        <label>Contract Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocumentFontStyle__c</fullName>
        <description>The default font style of the template</description>
        <label>Document Font Style</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocumentStyleData__c</fullName>
        <label>Document Style</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExternalID__c</fullName>
        <description>Internally used string used for migrating a template between different SFDC orgs</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ImageStyleData__c</fullName>
        <label>Image Style Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denoted if the document template is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsSignatureRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If document created from this template needs to be signed</description>
        <label>Is Signature Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SectionHeadersDisplayStyle__c</fullName>
        <description>Section header display style</description>
        <label>Section Headers Display Style</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SectionHeadersFontStyle__c</fullName>
        <description>Section header font style</description>
        <label>Section Headers Font Style</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <description>Document Template status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TrackContractRedlines__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether redlines will be tracked on documents created from this template</description>
        <label>Track Contract Redlines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <description>Type of document template</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VersionNumber__c</fullName>
        <description>Version number</description>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Document Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>